crates/oxc_css_parser/tests/error/less/mixin/mixed-definition-params-1.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `)`, but found `:`
  ┌─ mixed-definition-params-1.less:1:24
  │
1 │ .mixin(@a: 5; @b: 6, @c: 7) {}
  │                        ^


